[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "diffusion"
version = "0.1.0"
description = "A minimal DDPM training package with UNet and CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "PyYAML>=6.0",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.64",
]

[project.optional-dependencies]
wandb = ["wandb>=0.21.0"]

[project.scripts]
diffusion-train = "diffusion.main:main"
